--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "keywords": [
