--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "javascript",
